# eurocc_cfd

cfd/: Cargo.toml
cfd/src/: main.rs
cfd_rayon/src/: main.rs
